new twitter handle

--- a/_data/social-icons.yml
+++ b/_data/social-icons.yml
@@ -7,7 +7,7 @@ medium:
   name: Medium
   svg: "svg/medium.svg"
 twitter:
-  url: https://twitter.com/b0xNet
+  url: https://twitter.com/bzxHQ
   name: Twitter
   svg: "svg/twitter.svg"
 discord:
