--- a/_data/team.yml
+++ b/_data/team.yml
@@ -83,6 +83,16 @@ With solid background in user experience design, Pavel easily copes with the tas
     linkedin: https://linkedin.com/in/bshevchenko
     github: https://github.com/bshevchenko
 
+-   name: Keval Sheth
+    bio: Full Stack Developer
+    image: /images/team/keval-sheth.jpg
+    info: "Keval Sheth is a Full Stack Developer at bZx, where he manages web application platform of Torque and Fulcrum.
+
+Keval has worked with reputable companies like Microsoft and Nomura and helped in building the platform that handles millions of transaction on day to day basis. Having worked with many startups before he has good hands on experience in building product and team from ground level and taking it up to funding rounds.
+
+Keval is a chess lover and during winter you can find him skiing or skating."
+    github: http://github.com/KevalS
+
 -   name: Manish Singh
     bio: "bZx Advisor, CIO at Crossbridge Capital"
     image: /images/team/manish-singh.jpg
