--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,4 +5,8 @@ Sawinyh:
 Kistner:
     name: Kyle J Kistner
     bio: CVO @ bZx. Product, Protocol Design, & Token Economics.
-    image: /images/authors/kistner.jpeg    
+    image: /images/authors/kistner.jpeg
+Bean:
+    name: Tom Bean
+    bio: Founder and CEO @ bZx.
+    image: https://bzx.network/images/team/tom-bean.jpg
